--- a/index.html
+++ b/index.html
@@ -1,22 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>D3 Charts</title>
+    <title>Dashboard with Line Chart</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Chart.js CDN for easy integration -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
-    <h1>D3.js Visualizations</h1>
-    <div class="chart-container">
-        <div id="line-chart">
-            <h2>Line Chart</h2>
+    <div class="dashboard-container">
+        <h1>Sales & Expenses Dashboard</h1>
+        <div class="chart-wrapper">
+            <canvas id="chart"></canvas>
         </div>
-        <div id="bars">
-            <h2>Bar Chart</h2>
-        </div>
+        <p class="data-source">Data from <code>sample.csv</code></p>
     </div>
-    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
