--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard with Line Chart</title>
+    <title>Static Dashboard</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Chart.js CDN for easy integration -->
+    <!-- Chart.js and its date adapter for time scales -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.30.0/index.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.min.js"></script>
 </head>
 <body>
-    <div class="dashboard-container">
-        <h1>Sales & Expenses Dashboard</h1>
-        <div class="chart-wrapper">
-            <canvas id="chart"></canvas>
+    <div class="container">
+        <h1>Dashboard Overview</h1>
+        <div id="chart">
+            <canvas id="myChartCanvas"></canvas>
         </div>
-        <p class="data-source">Data from <code>sample.csv</code></p>
     </div>
-    <script src="app.js"></script>
+    <script src="app.js" defer></script>
 </body>
 </html>
