--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Static Dashboard</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Chart.js and its date adapter for time scales -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/date-fns@2.30.0/index.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns@3.0.0/dist/chartjs-adapter-date-fns.min.js"></script>
-</head>
-<body>
-    <div class="container">
-        <h1>Dashboard Overview</h1>
-        <div id="chart">
-            <canvas id="myChartCanvas"></canvas>
-        </div>
-    </div>
-    <script src="app.js" defer></script>
-</body>
-</html>
+<!doctype html><html><body><h1>Site ready</h1></body></html>
