--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard</title>
+    <title>Data Visualizations</title>
     <link rel="stylesheet" href="styles.css">
-    <!-- Chart.js CDN for charting capabilities -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 </head>
 <body>
-    <div class="dashboard-container">
-        <h1>Dashboard Overview</h1>
-        <div class="chart-container">
-            <h2>Data Trend</h2>
-            <canvas id="chart"></canvas>
-            <p id="loading-message">Loading chart data...</p>
-        </div>
-    </div>
+    <header>
+        <h1>Data Visualizations</h1>
+    </header>
+
+    <main>
+        <section>
+            <h2>Line Chart: Value Over Time</h2>
+            <div id="chart"></div>
+        </section>
+
+        <section>
+            <h2>Bar Chart: Annual Value Summary</h2>
+            <div id="bars"></div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Data Viz App</p>
+    </footer>
+
+    <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
